--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,9 +1,11 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900);
+
 .navbar-light {
-    font-family: "roboto",sans-serif;
+    font-family: "Roboto";
     text-rendering: optimizelegibility;
   }
 
   .navbar-dark {
-    font-family: "roboto",sans-serif;
+    font-family: "Roboto";
     text-rendering: optimizelegibility;
   }
