--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -5,8 +5,17 @@
     text-rendering: optimizelegibility;
   }
 
-  .navbar-dark {
+.navbar-dark {
     font-family: "Roboto";
     text-rendering: optimizelegibility;
   }
 
+h1{
+  font-family: "Roboto";
+  font-weight: 600;
+}
+
+h2{
+font-family: "Roboto";
+font-weight: 400;
+}
