--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -19,3 +19,10 @@ h2{
 font-family: "Roboto";
 font-weight: 600;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
