--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -20,7 +20,7 @@ font-family: "Roboto";
 font-weight: 600;
 }
 
-.center {
+.centre {
   display: block;
   margin-left: auto;
   margin-right: auto;
