--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,8 +21,8 @@ font-weight: 600;
 }
 
 .centre {
-  display: block;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
-  width: 30%;
+  width: 40%;
 }
