--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,7 +21,7 @@ font-weight: 600;
 }
 
 .centre {
-  display: inline-block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
