--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -26,3 +26,10 @@ font-weight: 600;
   margin-right: auto;
   width: 40%;
 }
+
+.medium-zoom-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
