--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -34,31 +34,28 @@ font-weight: 600;
   width: 40%;
 }
 
-ol { padding-left: 50px; }
-li { 
-  color: #4F4F4F; 
-  padding-left: 16px;
-  margin-top: 24px;
-  position: relative;
-  font-size: 16px;
-  line-height: 20px;
-  
-  &:before {
-    content: '';
-    display: block;
-    height: 42px;
-    width: 42px;
-    border-radius: 50%;
-    border: 2px solid #ddd;
-    position: absolute; // yeah, you have to manually position it based on the text size, line height, etc. (in the parent li style). it's not the smarest solution 
-    top: -12px;
-    left: -46px;
-  }
-}
-
 strong { color: #292929; }
 
-ol.alternating-colors { 
-  li:nth-child(odd):before { border-color: #0BAD02; }
-  li:nth-child(even):before { border-color: #2378D5; }
+
+ol {
+  list-style: none;
+  counter-reset: steps;
+}
+ol li {
+  counter-increment: steps;
+}
+ol li::before {
+  content: counter(steps);
+  margin-right: 0.5rem;
+  background: #ff6f00;
+  color: white;
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 50%;
+  display: inline-grid;
+  place-items: center;
+  line-height: 1.2em;
+}
+ol ol li::before {
+  background: darkorchid;
 }
