--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -61,7 +61,7 @@ ol {
             line-height: 1.2em;
             position: absolute;
             left: -2rem; /* Position outside the list item */
-            top: 0.2;
+            top: 3px;
         }
         
         ol ol {
