--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,14 +21,14 @@ font-weight: 600;
 }
 
 .centre {
-  display: block;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
 }
 
 .medium-zoom-image {
-  display: block;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
