--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -20,18 +20,24 @@ font-family: "Roboto";
 font-weight: 600;
 }
 
-.centre {
-  display: inline-block;
+.medium-zoom-image {
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
 }
 
-.medium-zoom-image {
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.centre {
   width: 40%;
+  max-width: 100%;
+  height: auto;
 }
 
 strong { color: #292929; }
