--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -20,18 +20,18 @@ font-family: "Roboto";
 font-weight: 600;
 }
 
-
-.image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+.centre {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 
-.centre {
+.medium-zoom-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 40%;
-  max-width: 100%;
-  height: auto;
 }
 
 strong { color: #292929; }
