--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -33,7 +33,7 @@ font-weight: 600;
   display: block !important;
   margin-left: auto !important;
   margin-right: auto !important;
-  width: 300px !important; /* Fixed width */
+  width: 60% !important; /* Fixed width */
   max-width: 90% !important; /* Responsive */
   height: auto !important;
 }
